Removed ★ from Titles

--- a/_posts/2012-05-24-on-hiatus.markdown
+++ b/_posts/2012-05-24-on-hiatus.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "★ On hiatus"
+title: "On hiatus"
 date: 2012-05-24 17:30:33.000000000 +02:00
 type: post
 published: true
