--- a/_posts/2012-05-29-be-a-doer.markdown
+++ b/_posts/2012-05-29-be-a-doer.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "★ Be a Doer"
+title: "Be a Doer"
 date: 2012-05-29 17:03:17.000000000 +02:00
 type: post
 published: true
