--- a/_posts/2012-06-02-ics-stats.markdown
+++ b/_posts/2012-06-02-ics-stats.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "★ ICS Stats"
+title: "ICS Stats"
 date: 2012-06-02 20:58:43.000000000 +02:00
 type: post
 published: true
