--- a/_posts/2012-08-15-air-music.markdown
+++ b/_posts/2012-08-15-air-music.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "★ Air Music"
+title: "Air Music"
 date: 2012-08-15 15:01:20.000000000 +02:00
 type: post
 published: true
