--- a/_posts/2012-02-27-dell-ceo.markdown
+++ b/_posts/2012-02-27-dell-ceo.markdown
@@ -10,11 +10,11 @@ categories:
 author: Valentino Urbano 
 ---
 
-Michael Dell, the CEO of the company, at a confence of IT executive [said][0] about Apple:
+Michael Dell, the CEO of the company, at a conference of IT executive [said][0] about Apple:
 
 > What would I do? I'd shut it down and give the money back to the shareholders.
 
-It was october 6, 2007.
+It was October 6, 2007.
 
 Today Apple stock index AAPL [reached][1] another all time high at 528.50$ - _correction 534.62$ _ a share.
 
