--- a/_posts/2012-04-15-100-years.markdown
+++ b/_posts/2012-04-15-100-years.markdown
@@ -10,23 +10,23 @@ categories:
 author: Valentino Urbano 
 ---
 
-Today is the 100th year anniversary of the sinking of the Titanic. To 'celebrate'[^1] it properly i strongly suggest you to watch the movie again, the 3D version released a week ago if possible. I know it might feel only a commercial move and basically it is, but it also makes people think.  
-While you're laying relaxed on the theatre's chair just before the show let your thoughts floating aroud for a few moments, unconsciously you start thinking about the disaster and the people aboard - and if at least One person a theatre does it all this business of the 3D version was worth.
+Today is the 100th year anniversary of the sinking of the Titanic. To 'celebrate'[^1] it properly I strongly suggest you to watch the movie again, the 3D version released a week ago if possible. I know it might feel only a commercial move and basically, it is, but it also makes people think.  
+While you're laying relaxed on the theatre's chair just before the show let your thoughts floating around for a few moments, unconsciously you start thinking about the disaster and the people aboard - and if at least One person a theatre does it all this business of the 3D version was worth.
 
 **Because I'm a poet too**[^2]
 
 That's why culture is so important, it's a way to let people think, and that's why dictatorship always tries to block it.
 
-Right after I finish writing an article on this blog, reading a book, listening to a song, watching a movie I stop for a moment to think back to what this experience have left.  
-A few times important thoughts, many other times less important ones, but - if it's a good movie/post/book - it always leaves you something, something you may even remember for a lifetime: I always recall some books,movies,posts,.. Even some that i read many years ago.
+Right after I finish writing an article on this blog, reading a book, listening to a song, watching a movie I stop for a moment to think back to what this experience has left.  
+A few times important thoughts, many other times less important ones, but - if it's a good movie/post/book - it always leaves you something, something you may even remember for a lifetime: I always recall some books, movies, posts,... Even some that I read many years ago.
 
 **Costa Concordia**
 
-The disaster of the Costa Concordia at giglio island has proved that after 100 years the situation is still critical, it got way better, but it's still a huge - underestimate - problem that need a fix. Maybe this anniversary can let people address this problem more, i ought to.
+The disaster of the Costa Concordia at Giglio island has proved that after 100 years the situation is still critical, it got way better, but it's still huge - underestimate - problem that needs a fix. Maybe this anniversary can let people address this problem more, I ought to.
 
 ---
 
   
-[^1]:ok celebrate is not the perfect word, remember would be better, but the simple act of remembering something is not enough, as the disaster of the costa concordia proved, do something it's much more important.  
+[^1]: Ok celebrate is not the perfect word, remember would be better, but the simple act of remembering something is not enough, as the disaster of the Costa Concordia proved, do something it's much more important.  
   
-[^2]:I'm actually joking of course.
+[^2]: I'm actually joking of course.
