--- a/_posts/2012-04-15-100-years.markdown
+++ b/_posts/2012-04-15-100-years.markdown
@@ -5,8 +5,7 @@ date: 2012-04-15 12:45:26.000000000 +02:00
 type: post
 published: true
 status: publish
-categories:
-- Miscellaneous
+categories: [General]
 author: Valentino Urbano 
 ---
 
