--- a/_posts/2019-02-24-Fear.md
+++ b/_posts/2019-02-24-Fear.md
@@ -5,7 +5,7 @@ date: 2019-02-24 22:28:05.000000000 +01:00
 type: post
 published: true
 status: publish
-categories: [General]
+categories: []
 image: /assets/article_images/yeshi-kangrang-316720-unsplash.jpeg
 image2: /assets/article_images/yeshi-kangrang-316720-unsplash.jpeg
 author: Valentino Urbano
