--- a/_posts/2018-12-02-remote.md
+++ b/_posts/2018-12-02-remote.md
@@ -6,8 +6,8 @@ type: post
 published: true
 status: publish
 categories: []
-image: /assets/article_images/.jpeg
-image2: /assets/article_images/.jpeg
+image:
+image2:
 author: Valentino Urbano
 ---
 
@@ -37,8 +37,8 @@ You need to also be focused and be able to work independently. You won't have a 
 
 Just don't think that because you work remotely you have it easy and don't have to work hard.
 
-You need to be careful to keep your office time separated from your home time. Otherwise, it's going to eat through both since there is not a clear separation between your home and your office.  
-Make that separation. Physically if you can.  
+You need to be careful to keep your office time separated from your home time. Otherwise, it's going to eat through both since there is not a clear separation between your home and your office.
+Make that separation. Physically if you can.
 Setup a different room as your home office and work exclusively from there and once you get out to stop working. The best thing to do to force the separation is to buy a desktop that you leave there (and also have a laptop to bring around whenever you need to go to the office or to a client) so you're forced to walk back in the office to work.
 
 **Attitude**
