--- a/_posts/2019-03-12-Mantra.md
+++ b/_posts/2019-03-12-Mantra.md
@@ -13,7 +13,7 @@ author: Valentino Urbano
 
 If you're like me you surely read a lot of "meta" blog about writing when you feel like you're hopeless and stuck. While content there is usually great you shouldn't hunker down on it.
 
-As for everything don't use all suggestions as a mantra. Develop your own habits and follow those.
+As for everything don't use all suggestions as a mantra. Develop your own habits and follow those. Really try to understand if something is going to work for you or not.
 
 Use other's flow and experiences as an inspiration to build your own. Learn from their experiences, but don't stop there. What might have worked for someone else doesn't necessarily mean it'll work for you verbatim.
 
@@ -23,4 +23,4 @@ You know yourself better than anyone else so you know what works for you and wha
 
 We bring our personal feelings and experiences with us and they reflect in our writing.
 
-Having a varied, engaging and happy life is key. I you don't get ideas to go out and experience the world more, you will get them.
+Having a varied, engaging and happy life is key. I you don't get ideas for a while go out and experience the world more, you will get them.
