--- a/_posts/2019-05-18-6-Months.md
+++ b/_posts/2019-05-18-6-Months.md
@@ -5,7 +5,7 @@ date: 2019-05-18 22:28:05.000000000 +01:00
 type: post
 published: true
 status: publish
-categories: [Tech]
+categories: [Writing]
 image:
 image2:
 author: Valentino Urbano
