--- a/_posts/2019-07-10-MACBOOK-PRO-2018.md
+++ b/_posts/2019-07-10-MACBOOK-PRO-2018.md
@@ -10,6 +10,7 @@ image:
 image2:
 author: Valentino Urbano
 ---
+
 # MacBook PRO 2018
 
 I've used it for (almost) a year. This is not a review, just a few points of what I like and didn't like about it.
@@ -17,33 +18,37 @@ I've used it for (almost) a year. This is not a review, just a few points of wha
 Pro
 
 - Screen
-  I used to have a 12' screen on my MacBook Air and passing to a 15' is a huge difference.
-- Touchbar
+  I used to have a 12' screen on my MacBook Air and passing to a 15' is a huge difference. The pixel density is great and you will notice and miss it if you switch back to a non retina display.
+- <s>Touchbar</s>
   <s>Despite being extremely skeptical I really like the touch bar (it has its quirks though)</s>After extensive use I now despise it. You can't feel anything under your fingers when pressing a button (since it's not a real button) so you often end up tapping on the wrong "key". You often accidentally hit it while trying to hit other buttons. It is just a mess [More of it in the Cons section].
 - True Tone
   I like the true tone display, better on the eyes even though some people might not like its colors. You get used to it pretty quickly though.
 - Trackpad
-  I like the bigger trackpad, as always with Apple it is years ahead of any competitor.
+  I like the bigger trackpad, as always with Apple it is years ahead of any competitor. I haven't found a single windows on linux device that even comes close.
 - Good Specs
-  I bought the 32GB of RAM with 500GB of SSD. The performance during development is decent enough, way better than on my Air. For only 3000 EUR more though.
+  I bought the 32GB of RAM with 500GB of SSD. The performance during development is decent enough, way better than on my Air. For only 3000 EUR more though. Having an SSD is one of the biggest changes in performance you can have so if you're still stuck with an HDD thaty should be your first upgrade.
 - mac OS
-  This is not specific to this model, but obviously, macOS is a fantastic OS. If you tried to do even only half of the things I try to do on my mac on Windows it would just crash over and over again.
+  This is not specific to this model, but obviously, macOS is a fantastic OS. If you tried to do even only half of the things I try to do on my mac on Windows it would just crash over and over again. The only reason Apple sells any mac is because mac OS.
 
 Cons
 
 - Touchbar
   Not have a physical off button and not having a physical ESC button is unacceptable. I also keep erroneously pressing the rightmost key on the touch bar when I want to press delete, but that might just be me not being used to it.
 - Keyboard
-  The keyboard is terrible. I keep typing wrong letters all the time. <s>I don't know if it's just a question of me needing to get used to or it just being bad for me. Time will tell.</s> It was both, it got better with time, but the butterfly keyboard is a r=terrible design. After less than one hears of use I already get phantasm touches every once in a while. Fortunately, it doesn't happen often, but the few times it does it is really annoying.
+  The keyboard is terrible. I keep typing wrong letters all the time. <s>I don't know if it's just a question of me needing to get used to or it just being bad for me. Time will tell.</s> It was both, it got better with time, but the butterfly keyboard is a terrible design. After less than one hours of use I already get phantasm touches every once in a while. Fortunately, it doesn't happen often, but the few times it does it is really annoying.
 - Ports
-  This is the worst. Only having a few USB-C ports, a headphone jack and nothing else on a Pro device are disgusting. Having to buy an expensive dongle to be able to use the device you bought for 4000 euro strikes as odd, to put it mildly. Not to talk about how damn terrible it looks with all the dongles hanging out from the sides.
+  <s>This is the worst.</s>Not the worst anymore, look at the last point. Only having a few USB-C ports, a headphone jack and nothing else on a Pro device is disgusting. Having to buy an expensive dongle to be able to use the device you bought for 4000 euro strikes as odd, to put it mildly. Not to talk about how damn terrible it looks with all the dongles hanging out from the sides. One thing is being forward thinking and removing the floppy drive and DVD slot, another thing is not having HDMI, ethernet nor USB ports. Every single professional is going to need at least a few of them without having to spend 200 EUR on accessories.
 - Performance
-  Playing a simple card game while having the browser makes it lag a lot. For a 4000 EUR machine, this is not acceptable.
+  Playing a simple card game while having the browser makes it lag a lot. For a 4000 EUR machine, this is not acceptable. The weirdest thing is that my MacBook Air did not. It seems to me that this machine even though it's way more powerful it has worse thermal limit, so Apple decided to ramp up the kernel*task whenever it gets too hot to save CPU cycles and help cooling the machine down, who cares about the dropped frames. \_This is just speculation at this point, I haven`t done any test to confirm or deny it. But kernel_task always takes 400% cpu under heavy load*
 - Battery life
   4 to 5 hours of battery life while browsing on wifi is NOT acceptable at this price point.
+- Popping Noises
+  This is probably the biggest problem so far. I didn't write about this because I thought it was an isolated problem to my machine only, but it seems that is widespread. For the last 3 months I've had popping noises coming out from the speakers each time I'm playing video or audio and the CPU load is relatively high. It makes it unbearable to do anything on the machine. Since I'm using it daily to get work done I don't have the time to get it to an AppStore for a replacement so for the time being I have to live with it. A band aid solution is to just use headphones all the times.
 
 # Should you buy it?
 
 I HAD TO buy it since my MacBook Air had 5 years and it was a real pain to work on it. Otherwise, I would have never bought it. Just being forced to book an appointment to buy it almost made me rethink the purchase. If you are so busy that you force me to waste so much time just to give you money, maybe I should go somewhere else. In the end, I needed it for my job so I did not have a choice. My only suggestion is to hold on buying any kind of MacBook until a model without the butterfly keyboard is available. You really do not want this keyboard if you can avoid it.
 
 If you need one right now, consider buying a 2015/2016 model without the touch bar and without the butterfly keyboard, maybe even used. It just needs to last long enough for the next generation to come out.
+
+If you don't need the portability get an iMac Pro or the Mac Pro instead.
