you own too much

--- a/_posts/2019-07-26-Muscle.md
+++ b/_posts/2019-07-26-Muscle.md
@@ -88,6 +88,6 @@ _I'm going to go into more details about editing in a later article._
 
 The final step is to share your creation. You have poured hours upon hours in your work, but the work is not finished until it's out there for people to read.
 
-[0]: {% post_url First Drafts Suck %}
+[0]: {% post_url 2018-12-16-First-Drafts-Suck %}
 
 [^1]: At times it is and in these cases, you should just block/ignore them. Unfortunately, there are people who go to extreme lengths to harass others, not much you can do about it.
