--- a/_posts/2019-08-28-Pomodoro.md
+++ b/_posts/2019-08-28-Pomodoro.md
@@ -5,7 +5,7 @@ date: 2019-08-28 22:28:05.000000000 +01:00
 type: post
 published: true
 status: publish
-categories: [Programming]
+categories: [Tech]
 image:
 image2:
 author: Valentino Urbano
