update article links

--- a/_posts/2019-09-01-writerise-5.md
+++ b/_posts/2019-09-01-writerise-5.md
@@ -42,7 +42,7 @@ On the other hand this means that if you switch machine or clear your keychain y
 
 [6]: /newsletter
 
-[1]: {% post_url 2018-11-22-writerise.md %}
-[2]: {% post_url 2018-11-25-Writerise2.md %}
-[3]: {% post_url 2018-12-04-Writerise3.md %}
-[4]: {% post_url 2018-12-07-Writerise4.md %}
+[1]: {% post_url 2018-11-22-writerise %}
+[2]: {% post_url 2018-11-25-Writerise2 %}
+[3]: {% post_url 2018-12-04-Writerise3 %}
+[4]: {% post_url 2018-12-07-Writerise4 %}
