--- a/_book-wordpress-to-jekyll/1.md
+++ b/_book-wordpress-to-jekyll/1.md
@@ -1,7 +1,5 @@
 ---
-title: 1
+title: About the Book
 ---
 
-Test Chapter 1
-
-**bold**
+This ebook is avaiblable online at no cost. If you want to pledgle a small amount of money to support its creation you can purchase the ebook version. Links are at the bottom of the page.
