--- a/_book-wordpress-to-jekyll/2.md
+++ b/_book-wordpress-to-jekyll/2.md
@@ -1,7 +1,15 @@
 ---
-title: 2
+title: About the Author
 ---
 
-Test Chapter 2
+Valentino Urbano is an iOS and Web Developer from Milan, Italy. Working on his own he pursues his passions as a programmer.
 
-**bold**
+- [Website][20]
+- [Twitter][21]
+- [Github][22]
+- [LinkedIn][23]
+
+[20]: http://www.valentinourbano.com/
+[21]: https://twitter.com/valentinourbano
+[22]: https://github.com/valeIT
+[23]: https://www.linkedin.com/in/valentinourbano/
