--- a/_book-wordpress-to-jekyll/10.md
+++ b/_book-wordpress-to-jekyll/10.md
@@ -1,4 +1,6 @@
-## Install RVM and Ruby
+---
+title: Install RVM and Ruby
+---
 
 Before trying to install any dev tools on a Mac it is a good idea to install the Xcode command line helper from Apple. Open Terminal.app and run `sudo xcode-select --install`. It will ask for your Mac's password and install the developer tools.
 
