--- a/_book-wordpress-to-jekyll/12.md
+++ b/_book-wordpress-to-jekyll/12.md
@@ -1,5 +1,6 @@
-
-## Setting up your GitHub pages repository
+---
+title: Setting up your GitHub pages repository
+---
 
 Login into Github and [create a new public repository](https://github.com/new) [Unless you plan on forking a theme], choose a name, ignoring the `Need inspiration? How about verbose-octo-waffle.` proposed by Github. I'm sure you can come up with a better name yourself.
 
