--- a/_book-wordpress-to-jekyll/13.md
+++ b/_book-wordpress-to-jekyll/13.md
@@ -1,4 +1,6 @@
-### New Repository
+---
+title: New Repository
+---
 
 If you have a new repository running `jekyll new` will automatically generate a base template for you to get started[^3]. Note that this will create a basic site (best suited for blogs), if you have different needs you should use a [theme](#forked-a-theme) For now leave everything as it is and [skip](#testing-the-website) the next section.
 
