--- a/_book-wordpress-to-jekyll/14.md
+++ b/_book-wordpress-to-jekyll/14.md
@@ -1,4 +1,6 @@
-### Forked a theme
+---
+title: Forked a theme
+---
 
 If you've forked a theme instead, you should follow the theme's installation instructions. For example, using the [mediator](https://github.com/dirkfabisch/mediator) theme the process is as follows:
 
