--- a/_book-wordpress-to-jekyll/15.md
+++ b/_book-wordpress-to-jekyll/15.md
@@ -1,5 +1,6 @@
-
-## Jekyll File Structure
+---
+title: Jekyll File Structure
+---
 
 The structure of your new website is not super complicated. Everything that starts with an underscore "\_" is your source that will generate the website. Once generated the site will live in the "\_site" folder.
 
