--- a/_book-wordpress-to-jekyll/16.md
+++ b/_book-wordpress-to-jekyll/16.md
@@ -1,5 +1,6 @@
-
-## Setting up your machine for SSH access to Github
+---
+title: Setting up your machine for SSH access to Github
+---
 
 [**If you've already set up your machine for SSH access, or you're used in doing it, freely skip to the next section**](#testing-the-website)
 
