--- a/_book-wordpress-to-jekyll/18.md
+++ b/_book-wordpress-to-jekyll/18.md
@@ -1,5 +1,6 @@
-
-## Initial Configuration
+---
+title: Initial Configuration
+---
 
 <a name="#site-structure"></a>
 Open `_config.yml` and set up basic information for your website, on top of most of the configuration details:
