--- a/_book-wordpress-to-jekyll/19.md
+++ b/_book-wordpress-to-jekyll/19.md
@@ -1,5 +1,6 @@
-
-## Plugins
+---
+title: Plugins
+---
 
 **Note**: According to an answer to my StackOverflow question and answers from Github directly plugins are not officially supported by Github Pages. Use them at your own risk.
 **Update**: According to Github **some** plugins are [now officially supported](https://github.com/jekyll/jekyll/issues/325)
