--- a/_book-wordpress-to-jekyll/20.md
+++ b/_book-wordpress-to-jekyll/20.md
@@ -1,5 +1,6 @@
-
-## More About Your Site Structure
+---
+title: More About Your Site Structure
+---
 
 We've already done [a basic introduction](#site-structure) on the site structure and what each folder contains. Now we will go more in detail for each section;
 
