--- a/_book-wordpress-to-jekyll/21.md
+++ b/_book-wordpress-to-jekyll/21.md
@@ -1,5 +1,6 @@
-
-## Migrating
+---
+title: Migrating
+---
 
 After much theory, we reached the exciting part of the journey. Migration all of your posts automatically from your old WordPress blog to Jekyll.
 
