--- a/_book-wordpress-to-jekyll/22.md
+++ b/_book-wordpress-to-jekyll/22.md
@@ -1,5 +1,6 @@
-
-### Converting the HTML files to Markdown
+---
+title: Converting the HTML files to Markdown
+---
 
 NOTE: Make a backup of your HTML files before trying this!
 
