--- a/_book-wordpress-to-jekyll/25.md
+++ b/_book-wordpress-to-jekyll/25.md
@@ -1,4 +1,6 @@
-### `_data`
+---
+title: The `_data` Folder
+---
 
 I created an `apps.yml` file to store all the data that you see in the [apps section](/apps).
 
