--- a/_book-wordpress-to-jekyll/32.md
+++ b/_book-wordpress-to-jekyll/32.md
@@ -1,5 +1,6 @@
-
-#### Broken links
+---
+title: Broken links
+---
 
 The WordPress installation left most of the links to other articles as absolute articles. This left the website address in the URL, so when I either change the permalink structure or the website URL they are all going to break.
 
