--- a/_book-wordpress-to-jekyll/33.md
+++ b/_book-wordpress-to-jekyll/33.md
@@ -1,4 +1,6 @@
-#### Footnotes and Images
+---
+title: Footnotes and Images
+---
 
 Most of the footnotes and images were broken as well. There is not a quick solution for it since they are very different for each article so you'll have to go through your posts one by one to fix them.
 
