--- a/_book-wordpress-to-jekyll/36.md
+++ b/_book-wordpress-to-jekyll/36.md
@@ -1,5 +1,6 @@
-
-##### Extra: Configuring CNAME
+---
+title: Extra - Configuring CNAME
+---
 
 Create a new `CNAME` DNS record from your registrar and decide if the canonical url for your website should be with or without www, without it looks more clean, with is better for tecnical reasons. Github strongly advises to use a www subdomain for the following reasons:
 
