--- a/_book-wordpress-to-jekyll/16.md
+++ b/_book-wordpress-to-jekyll/16.md
@@ -52,7 +52,7 @@ Now that you have generated a key and added it to the agent you can Log In to Gi
 
 We're are not going to set up or push to a repository yet. We've set up the key not so that we don't have to go through the lengthy process of setting up a key once everything is ready. Next up is actually setting up the website with Jekyll.
 
-[3]: {% post_url ssh-key-windows.md %}
+[3]: {% post_url 2019-03-14-ssh-key-windows %}
 [4]: https://help.github.com/en/enterprise/2.15/user/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent
 [5]: https://help.github.com/en/articles/testing-your-ssh-connection
 [6]: https://help.github.com/en/articles/error-permission-denied-publickey
