--- a/_book-wordpress-to-jekyll/29.md
+++ b/_book-wordpress-to-jekyll/29.md
@@ -4,7 +4,7 @@ title: Analytics
 
 #### Google Analytics and Piwik / Matomo
 
-If you're using Github Pages (as I'm doing) this is not necessary since Github has its own analytics for them, but I have all my other analytics on Google Analytics and I really don't want to look in 2 different places if I can help it. And yes I don't like Google spying on me, but as I said in my [article about analytics all the other providers fall short. I've heard great things about Piwik (now called Matomo) lately so maybe it became better after all these years, but I'm not going to try it again (for a while at least).]({% post_url 2016-02-20-piwik %})
+If you're using Github Pages (as I'm doing) this is not necessary since Github has its own analytics for them, but I have all my other analytics on Google Analytics and I really don't want to look in 2 different places if I can help it. And yes I don't like Google spying on me, but as I said in my [article about analytics all the other providers fall short. I've heard great things about Piwik (now called Matomo) lately so maybe it became better after all these years, but I'm not going to try it again (for a while at least).][67]
 
 - Create a new property for `USERNAME.github.io` and get the tracking code.
 - Go to the `_includes` folder and paste the code in the `javascripts.html` file
@@ -15,3 +15,4 @@ Google Analytics is not great. The tracking is not the only problem, it also bec
 
 Instead, you can use Cloudflare to both serve your website and provide analytics. Since Cloudflare works at the exit nodes of the network it counts all users giving a more accurate result. [That's not all though. If you want to know more I have a whole section on Clouflare][#cloudflare].
 
+[67]: {% post_url 2018-02-11-Piwik %}
